--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "6.0.0",
   "description": "Ready-to-go Preact starter project powered by webpack.",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --progress",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode=development --inline --hot --progress",
     "start": "serve build -s -c 1",
     "prestart": "npm run build",
-    "build": "cross-env NODE_ENV=production webpack --progress",
+    "build": "cross-env NODE_ENV=production webpack --progress --mode=production",
     "prebuild": "mkdirp build && ncp src/assets build/assets",
     "test": "npm run -s lint && jest --coverage",
     "test:watch": "npm run -s test -- --watch",
@@ -62,7 +62,7 @@
     "eslint": "^4.1.0",
     "eslint-plugin-jest": "^21.7.1",
     "eslint-plugin-react": "^7.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.7",
     "html-webpack-plugin": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
@@ -83,9 +83,11 @@
     "sinon-chai": "^2.9.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.0.0",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.4"
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "autobind-decorator": "^2.4.0",
